--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/x-icon" href="./src/assets/image.png">
+  <link rel="icon" type="image/x-icon" href="./src/assets/Favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>News App - By React JS</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
